# GEngine

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
app/src/Test/: CMakeLists.txt  Test.cpp
core/: CMakeLists.txt
core/include/: GEngine.h
core/src/: CMakeLists.txt  GEngine.cpp
core/src/Bruh/: Bruh.cpp  Bruh.h  CMakeLists.txt
core/src/Components/: CMakeLists.txt  Components.h  Position.cpp  Position.h  PositionComponent.cpp  PositionComponent.h  RenderComponent.h  TimerComponent.h
core/src/ECS/: ECS.h  Entity.h
core/src/Renderer/: CMakeLists.txt  RenderData.cpp  RenderData.h  Renderer.cpp  Renderer.h
core/src/Runtime/: CMakeLists.txt  Runtime.cpp  Runtime.h
core/src/Runtime/Threads/: Audio.cpp  Audio.h  CMakeLists.txt  Logic.cpp  Logic.h  Render.cpp  Render.h  ThreadData.cpp  ThreadData.h
core/src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
core/src/Systems/: CMakeLists.txt  CustomSystem.h  PositionSystem.cpp  PositionSystem.h  Systems.h  TimerSystem.cpp  TimerSystem.h
core/src/Util/: CMakeLists.txt  Util.cpp  Util.h
page/GEngine-logo/: logo_info.txt
